# django-simple-app

blogo/back_end/: pyproject.toml
blogo/back_end/blog/: models.py  schema.py
blogo/back_end/core/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
blogo/back_end/users/: admin.py  models.py  schema.py
mysite/mysite/: settings.py  urls.py
