[tool.poetry]
name = "django-simple-app"
version = "0.1.0"
description = ""
authors = ["Feyaaz <feyaazc94@gmail.com>"]
readme = "README.md"
packages = [{include = "django_simple_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
strawberry-graphql-django = "^0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
